--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,16 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
+    <ion-title> Tab 3 </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <ion-header collapse="condense"> </ion-header>
+  <div class="logo">
+    <h1>Todo List</h1>
+    <ion-img
+      src="../../assets/logo.jpg"
+      alt="The Wisconsin State Capitol building in Madison, WI at night"
+    ></ion-img>
+  </div>
 </ion-content>
